# xianyuPlayer

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/src/main/cpp/: CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  LogUtils.h  fileMetaDataInfo.cpp  fileMetaDataInfo.h  native-lib.cpp
app/src/main/cpp/FFMpegmode/: AudioAlbumCover.cpp  AudioAlbumCover.h  AudioEncodeStream.cpp  AudioEncodeStream.h  AvPacketMemoryManager.h  AvpacketMemoryManager.cpp  CMakeLists.txt  VideoEncodeStream.cpp  VideoEncodeStream.h  audioFrameQueue.cpp  audioFrameQueue.h  decodeStream.cpp  decodeStream.h  fileMetaDataInfo.cpp  fileMetaDataInfo.h
app/src/main/cpp/live_stream/: CMakeLists.txt  PushRtspLiveStream.cpp  PushRtspLiveStream.h
app/src/main/cpp/my_utils/: CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  CommonVideoFrame.cpp  CommonVideoFrameBuffer.h  sonic.c  sonic.h
app/src/main/cpp/player/: CMakeLists.txt  HwMediacodecPlayer.cpp  HwMediacodecPlayer.h  NativeWindowRender.cpp  NativeWindowRender.h  oboePlayer.cpp  oboePlayer.h
app/src/main/cpp/third_part/ffmpeg/include/libavcodec/: ac3_parser.h  adts_parser.h  avcodec.h  avdct.h  avfft.h  bsf.h  codec.h  codec_desc.h  codec_id.h  codec_par.h  d3d11va.h  defs.h  dirac.h  dv_profile.h  dxva2.h  jni.h  mediacodec.h  packet.h  qsv.h  vdpau.h  version.h  version_major.h  videotoolbox.h  vorbis_parser.h  xvmc.h
app/src/main/cpp/third_part/ffmpeg/include/libavdevice/: avdevice.h  version.h  version_major.h
app/src/main/cpp/third_part/ffmpeg/include/libavfilter/: avfilter.h  buffersink.h  buffersrc.h  version.h  version_major.h
app/src/main/cpp/third_part/ffmpeg/include/libavformat/: avformat.h  avio.h  version.h  version_major.h
app/src/main/cpp/third_part/ffmpeg/include/libavutil/: adler32.h  aes.h  aes_ctr.h  ambient_viewing_environment.h  attributes.h  audio_fifo.h  avassert.h  avstring.h  avutil.h  base64.h  blowfish.h  bprint.h  bswap.h  buffer.h  camellia.h  cast5.h  channel_layout.h  common.h  cpu.h  crc.h  csp.h  des.h  detection_bbox.h  dict.h  display.h  dovi_meta.h  downmix_info.h  encryption_info.h  error.h  eval.h  fifo.h  file.h  film_grain_params.h  frame.h  hash.h  hdr_dynamic_metadata.h  hdr_dynamic_vivid_metadata.h  hmac.h  hwcontext.h  hwcontext_cuda.h  (+50 more)
app/src/main/cpp/third_part/ffmpeg/include/libpostproc/: postprocess.h  version.h  version_major.h
app/src/main/cpp/third_part/ffmpeg/include/libswresample/: swresample.h  (+2 more)
(+107 files in other folders)
